tests/neg/i871.scala
trait Message {
  def first(x: Int) // error: missing return type
  def second // error: missing return type
    1
}
